--- a/css/styles.css
+++ b/css/styles.css
@@ -12,3 +12,12 @@
 .info_img {
     width: 300px;
 }
+header {
+    background-color: #1F2937;
+    color: white;
+}
+
+footer {
+    background-color: #1F2937;
+    color: white;
+}
