style(.insp_quote): Add styling
* Add styling for font, weight, size, color, background-color

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,11 @@ footer {
     background-color: #1F2937;
     color: white;
 }
+
+.insp_quote {
+    background-color: #E5E7EB;
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1F2937;
+}
