style(.btn_signup): Generic style
* Add background-color, color, and padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,3 +34,10 @@ footer {
     background-color: #3882F6;
     color: white;
 }
+
+.btn_signup {
+    background-color: #3882F6;
+    color: white;
+    border-color: white;
+    padding: 5px;
+}
