chore(add div): Separate Header into 2 areas

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,10 +8,22 @@
   margin: 0;
   padding: 0;
 }
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.logo_and_links {
+    display: flex;
+    flex-direction: row;
+}
+
 
 .info_img {
     width: 300px;
 }
+
 header {
     background-color: #1F2937;
     color: white;
