--- a/css/styles.css
+++ b/css/styles.css
@@ -13,21 +13,36 @@ body {
     flex-direction: column;
     align-items: center;
 }
-
-.logo_and_links {
-    display: flex;
-    flex-direction: row;
-}
-
-
-.info_img {
-    width: 300px;
-}
+/** Header ************************************ */
 
 header {
     background-color: #1F2937;
     color: white;
 }
+.logo_and_links {
+    display: flex;
+    justify-content: space-between;
+    height: 50px;
+    padding: 10px;
+}
+
+ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    list-style: none;
+
+}
+li {
+    padding: 0px 20px;
+}
+
+/** */
+
+.info_img {
+    width: 300px;
+}
+
 
 footer {
     background-color: #1F2937;
