--- a/css/styles.css
+++ b/css/styles.css
@@ -37,10 +37,22 @@ li {
     padding: 0px 20px;
 }
 
-/** */
+/** .info ************************************* */
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px 100px;
+}
+
+.fig_container {
+    display: flex;
+    flex-direction: row;
+}
 
 .info_img {
-    width: 300px;
+    height: 300px;
+    padding: 15px;
 }
 
 
