--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,13 @@ li {
     justify-content: center;
 }
 
+/** .call_to_action *************************** */
+.call_to_action {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 20px 50px;
+}
 footer {
     background-color: #1F2937;
     color: white;
