--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ header {
     justify-content: space-between;
     height: 50px;
     padding: 10px;
+    margin: 10px 100px;
 }
 ul {
     display: flex;
@@ -41,9 +42,22 @@ li {
 .signup {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
+    margin: 10px 100px;
+    padding: 10px;
 }
-
+.signup_sub {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+.logo {
+    width: 50px;
+    align-items: flex-end;
+}
+.ph_image {
+    width: 50%;
+}
 /** .info ************************************* */
 .info {
     display: flex;
@@ -97,6 +111,7 @@ footer {
 .btn_signup {
     background-color: #3882F6;
     color: white;
-    border-color: white;
     padding: 5px;
+    border-radius: 5px;
+    width: 150px;
 }
