--- a/css/styles.css
+++ b/css/styles.css
@@ -68,14 +68,22 @@ li {
 
 .fig_container {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
+    margin-top: 20px;
+    gap: 20px;
 }
 
 .info_img {
-    height: 100px;
-    padding: 15px;
+    height: 150px;
+    width: 150px;
+    border: 3px solid #3882F6;
+    border-radius: 5px;
 }
-
+figcaption {
+    width: 150px;
+    text-align: center;
+}
 /** .insp_quote ******************************* */
 .insp_quote {
     display: flex;
