--- a/css/styles.css
+++ b/css/styles.css
@@ -12,13 +12,19 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100vh;
+}
+main {
+    /* flex-grow: 1; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 /** Header ************************************ */
 header {
     background-color: #1F2937;
     color: white;
     display: flex;
-    justify-content: flex-start;
     flex-direction: column;
     width: 100%;
 }
@@ -86,12 +92,13 @@ figcaption {
 }
 /** .insp_quote ******************************* */
 .insp_quote {
-    display: flex;
+    /* display: flex; */
     justify-content: center;
+    flex-grow: 1;
     flex-wrap: wrap;
     background-color: #E5E7EB;
     width: 100%;
-    margin: 10px 0px;
+    /* margin: 10px 0px; */
     padding: 50px 110px;
     font-size: 36px;
     font-weight:lighter;
