--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,8 @@ li {
     align-items: flex-end;
 }
 .ph_image {
-    width: 50%;
+    width: 500px;
+    margin: 20px;
 }
 /** .info ************************************* */
 main {
