--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    flex: 1;
     width: 100%;
 }
 
@@ -97,9 +98,9 @@ figcaption {
 /** .insp_quote ******************************* */
 .insp_quote {
     display: flex;
-    flex: 1;
+    flex-direction: column;
+    /* flex: 1; */
     justify-content: center;
-    flex-wrap: wrap;
     background-color: #E5E7EB;
     width: 100%;
     /* margin: 10px 0px; */
