--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ header {
     justify-content: space-between;
     height: 50px;
     padding: 10px;
-    margin: 10px 100px;
+    margin: 15px 100px 25px;
 }
 ul {
     display: flex;
@@ -44,7 +44,7 @@ li {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 10px 100px;
+    margin: 25px 100px 50px;
     padding: 10px;
 }
 .signup_sub {
