--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 50px 100px;
+    margin: auto 100px;
 }
 
 .fig_container {
@@ -106,7 +106,7 @@ figcaption {
     /* margin: 10px 0px; */
     padding: 50px 110px;
     font-size: 36px;
-    font-weight:lighter;
+    font-weight:100;
     font-style: italic;
     color: #1F2937;
 }
@@ -121,10 +121,10 @@ figcaption {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding: 20px 50px;
+    padding: 40px 50px;
     background-color: #3882F6;
     color: white;
-    margin: 50px 100px;
+    margin: auto 100px;
     border-radius: 5px;
 }
 
@@ -132,7 +132,7 @@ figcaption {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 0px 50px;
+    margin-right: 100px;
 }
 
 .btn_signup {
